--- a/index.html
+++ b/index.html
@@ -8,23 +8,28 @@
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Calculator</title>
 </head>
 <body>
     <main>
-        <button></button>
-        <div></div>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="decimal"></button>
+        <button class="clear">CE</button>
+        <div class="display-screen"></div>
+        <button class="numbers 7">7</button>
+        <button class="numbers 8">8</button>
+        <button class="numbers 9">9</button>
+        <button class="divide">÷</button>
+        <button class="numbers 4">4</button>
+        <button class="numbers 5">5</button>
+        <button class="numbers 6">6</button>
+        <button class="multiply">x</button>
+        <button class="numbers 1">1</button>
+        <button class="numbers 2">2</button>
+        <button class="numbers 3">3</button>
+        <button class="subtract">-</button>
+        <button class="numbers 0">0</button>
+        <button class="decimal">.</button>
+        <button class="add">+</button>
+        <button class="equal">=</button>
     </main>
 </body>
 </html>
