--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
     <main>
         <button class="clear">CE</button>
         <div class="display-screen"></div>
-        <button class="numbers 7">7</button>
-        <button class="numbers 8">8</button>
-        <button class="numbers 9">9</button>
-        <button class="divide">÷</button>
-        <button class="numbers 4">4</button>
-        <button class="numbers 5">5</button>
-        <button class="numbers 6">6</button>
-        <button class="multiply">x</button>
-        <button class="numbers 1">1</button>
-        <button class="numbers 2">2</button>
-        <button class="numbers 3">3</button>
-        <button class="subtract">-</button>
-        <button class="numbers 0">0</button>
-        <button class="decimal">.</button>
-        <button class="add">+</button>
-        <button class="equal">=</button>
+        <button data-index="7" class="numbers">7</button>
+        <button data-index="8" class="numbers">8</button>
+        <button data-index="9" class="numbers">9</button>
+        <button data-index="÷" class="divide">÷</button>
+        <button data-index="4" class="numbers">4</button>
+        <button data-index="5" class="numbers">5</button>
+        <button data-index="6" class="numbers">6</button>
+        <button data-index="x" class="multiply">x</button>
+        <button data-index="1" class="numbers">1</button>
+        <button data-index="2" class="numbers">2</button>
+        <button data-index="3" class="numbers">3</button>
+        <button data-index="-" class="subtract">-</button>
+        <button data-index="0" class="numbers">0</button>
+        <button data-index="." class="decimal">.</button>
+        <button data-index="+" class="add">+</button>
+        <button data-index="=" class="equal">=</button>
     </main>
 </body>
 </html>
