--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="./js/script.js"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <main>
-        <button></button>
+    <main id="calculator">
+        <!-- <button></button> -->
         <div></div>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="numbers"></button>
-        <button class="decimal"></button>
+        <button data-index="0" class="numbers">1</button>
+        <button data-index="1" class="numbers">1</button>
+        <button data-index="2" class="numbers">1</button>
+        <button data-index="3" class="numbers">1</button>
+        <button data-index="4" class="numbers">1</button>
+        <button data-index="5" class="numbers">1</button>
+        <button data-index="6" class="numbers">1</button>
+        <button data-index="7" class="numbers">1</button>
+        <button data-index="8" class="numbers">1</button>
+        <button data-index="9" class="numbers">1</button>
+        <button data-index="10" class="decimal numbers">1</button>
+        <button data-index="11" class="numbers">1</button>
+        <button data-index="12" class="numbers">1</button>
+        <button data-index="13" class="numbers">1</button>
+        <button data-index="14" class="numbers">1</button>
+        <button data-index="15" class="decimal numbers">1</button>
     </main>
 </body>
+
 </html>
