--- a/index.html
+++ b/index.html
@@ -15,25 +15,24 @@
 
 <body>
     <main id= "calculator">
-        <button class="clear">CE</button>
+        <button class="clear numbers">CE</button>
         <div class="display-screen"></div>
         <button data-index="7" class="numbers">7</button>
         <button data-index="8" class="numbers">8</button>
         <button data-index="9" class="numbers">9</button>
-        <button data-index="÷" class="divide">÷</button>
+        <button data-index="÷" class="divide numbers">÷</button>
         <button data-index="4" class="numbers">4</button>
         <button data-index="5" class="numbers">5</button>
         <button data-index="6" class="numbers">6</button>
-        <button data-index="x" class="multiply">x</button>
+        <button data-index="x" class="multiply numbers">x</button>
         <button data-index="1" class="numbers">1</button>
         <button data-index="2" class="numbers">2</button>
         <button data-index="3" class="numbers">3</button>
-        <button data-index="-" class="subtract">-</button>
+        <button data-index="-" class="subtract numbers">-</button>
         <button data-index="0" class="numbers">0</button>
-        <button data-index="." class="decimal">.</button>
-        <button data-index="+" class="add">+</button>
-        <button data-index="=" class="equal">=</button>
+        <button data-index="." class="decimal numbers">.</button>
+        <button data-index="+" class="add numbers">+</button>
+        <button data-index="=" class="equal numbers">=</button>
     </main>
 </body>
-
 </html>
