added css styling, added js script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <script defer src="./js/script.js"></script>
     <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
@@ -15,7 +16,7 @@
 
 <body>
     <main id= "calculator">
-        <button class="clear numbers">CE</button>
+        <button class="clear">CE</button>
         <div class="display-screen"></div>
         <button data-index="7" class="numbers">7</button>
         <button data-index="8" class="numbers">8</button>
